--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robots_4",
-  "homepage": "https://aunhengly.github.io/robots_4-redux",
+  "homepage": "https://aunhengly.github.io/robots_4-redux-pwa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
