--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robots_4",
-  "homepage": "https://aunhengly.github.io/robots_4-redux-pwa",
+  "homepage": "https://aunhengly.github.io/robots_4-redux-pwa_testing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -59,5 +59,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@cfaester/enzyme-adapter-react-18": "^0.5.1",
+    "enzyme": "^3.11.0"
+  }
 }
