--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cfaester/enzyme-adapter-react-18": "^0.5.1",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "jest": "^28.1.0"
   }
 }
